<resources>
    <string name="app_name">UniversalApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_add">Add New User</string>
    <string name="action_edit">Edit User</string>
    <string name="action_delete">Delete User</string>
    <string name="action_change">Change User</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="not_provided">Not provided!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="done">done</string>
    <string name="nameRquired">Name is required to register!</string>
    <string name="surnameRquired">Surname is required to register!</string>
    <string name="emailRquired">Email is required to register!</string>
    <string name="passwordRquired">Password is required to register!</string>
    <string name="user_register_done">You have been registered successfully</string>
    <string name="user_register_failed">Error with your registration</string>
    <string name="edit_user_successful">User saved</string>
    <string name="edit_user_failed">Error while saving changes</string>
    <string name="new_user">Register new user</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="stay">Stay here</string>
    <string name="delete_dialog_msg">Delete User?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_user_successful">User deleted</string>
    <string name="delete_user_failed">Error with deleting user</string>
    <string name="clicked">Clicked on Button</string>
    <string name="title_activity_maps">Map</string>

    <string name="music_player">Music Player</string>
    <string name="search">Search</string>
    <string name="all">all</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="find">Find a song</string>
    <string name="choose">Choose a song</string>
    <string name="player">Some TextView explaining what is this</string>

    <string name="allSongs">All Songs</string>
    <string name="now">Now Playing</string>

    <string name="aho">Aho lel we adda</string>
    <string name="atr">Atr el-hayah</string>
    <string name="dawar">Dawar benafsak</string>
    <string name="elhassah">El-hassah el-sabaa</string>
    <string name="elhelm">El-helm</string>
    <string name="elleila">El-leila</string>
    <string name="shoft">Shoft el-ayam</string>
    <string name="srce">Srce vatreno</string>
    <string name="svad">Svadiba</string>
    <string name="terca">Terca na tisinu</string>
    <string name="pirate">The pirate bay song</string>
    <string name="treble">Treblebass</string>
    <string name="wayah">Wayah</string>
    <string name="zorica">Zorica</string>

    <string name="amr">Amr Diab</string>
    <string name="ahmed">Ahmed Mekky</string>
    <string name="nzb">Nered feat. Zapresic Boyz</string>
    <string name="alex">Alexandros Tsopozidis</string>
    <string name="silente">Silente</string>
    <string name="dk">Dubioza kolektiv</string>
    <string name="svadbas">Svadbas</string>
    <string name="mejasi">Mejasi</string>

    <string name="action_vizulizer_settings">Settings</string>
    <string name="pref_show_bass_label">Show Bass</string>
    <string name="pref_show_bass_key" translatable="false">show_bass</string>
    <string name="pref_show_mid_range_label">Show Mid Range</string>
    <string name="pref_show_mid_range_key" translatable="false">show_mid_range</string>
    <string name="pref_show_treble_label">Show Treble</string>
    <string name="pref_show_treble_key" translatable="false">show_treble</string>
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>
    <string name="pref_size_label">Size Multiplier</string>
    <string name="pref_size_key" translatable="false">size</string>
    <string name="pref_size_default" translatable="false">0.1</string>
    <string name="pref_color_label">Shape Color</string>
    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_blue">Blue</string>
    <string name="pref_color_label_green">Green</string>
    <string name="pref_color_key" translatable="false">color</string>
    <string name="pref_color_red_value" translatable="false">red</string>
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <string name="pref_color_green_value" translatable="false">green</string>
    <string name="unknown_artist">Unknown Artist</string>

    <string name="search_yt">Search YouTube</string>
    <string name="no_videos">No videos found.</string>
    <string name="yt_searching">Searching YouTube…</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="you_tube">YouTube</string>
    <string name="videolist_name">Video List</string>
    <string name="playerview_text">This is a YouTubePlayerView!</string>
    <string name="fullscreen_name">Full Screen</string>
    <string name="playerfragment_text">This is a YouTubePlayerFragment!</string>
    <string name="skip_to">Skip To</string>
    <string name="seconds">secs</string>
    <string name="player_style">Player Style</string>
    <string name="def">Default</string>
    <string name="minimal">Minimal</string>
    <string name="chromeless">Chromeless</string>
    <string name="play_video">Play video</string>
    <string name="play_playlist">Play playlist</string>
    <string name="play_video_list">Play video list</string>
    <string name="start_index">Start index</string>
    <string name="start_time">Start time (sec)</string>
    <string name="autoplay">Autoplay</string>
    <string name="lightbox_mode">Lightbox mode</string>
    <string name="intent_select">Please select an action:</string>
    <string name="intent_disabled">This intent is not supported with the currently installed version of YouTube.</string>
    <!--<string name="youtube_currently_installed">YouTube version installed on this device: <xliff:g id="youtube_version">%1$s</xliff:g>.</string>-->
    <string name="youtube_not_installed">YouTube is not installed on this device.</string>
    <string name="enter_fullscreen">Enter Fullscreen</string>
    <string name="landscape_fullscreen">Always fullscreen in landscape</string>
    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="dama">Simple Dama</string>
    <string name="play_again">Do you want to play again?</string>
    <string name="dialog_exit">Are you sure you want to exit the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="scanner_activity">Scanner</string>
    <bool name="cameraPreviewShouldFillView">true</bool>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <integer name="viewfinder_border_width">4</integer>
    <integer name="viewfinder_border_length">60</integer>
    <string name="change_user">Scanned code is assigned to another user, do you want to activate this user?</string>
    <string name="assign">Assign code to user</string>
    <string name="appwidget_text">Universal App Widget</string>
    <string name="main_widget_text">Songs will appear here</string>

    <string name="preference_change_error">Please select a number between 0.1 and 3</string>
    <string name="missed_name">You missed name</string>
    <string name="missed_surname">You missed surname</string>
    <string name="missed_email">You missed email</string>
    <string name="missed_password">You missed password</string>
    <string name="update_user_ex">Update is not supported for </string>
    <string name="insert_user_failed">Failed to insert row for </string>
    <string name="insert_not_supported">Insertion is not supported for </string>
    <string name="delete_not_supported">Deletion is not supported for </string>
    <string name="unknown_uri">Cannot query unknown URI </string>
    <string name="get_type_ex_1">Unknown URI </string>
    <string name="get_type_ex_2"> with match </string>
    <string name="audio_permission">Permission for audio not granted. Visualizer can\'t run.</string>
    <string name="blue_win">Blue Win</string>
    <string name="green_win">Green Win</string>
    <string name="camera_permission">Please grant camera permission to use the QR Scanner</string>
    <string name="et_enter_password">Enter Your Password</string>
    <string name="scanned_code">Scanned code </string>
    <string name="code_current_user"> is assigned to currently active user</string>
    <string name="code_another_user"> is assigned to another user, do you want to activate this user?</string>
    <string name="scan_results">Scan Results</string>
    <string name="format_selector">format_selector</string>
    <string name="read_ext_storage">Can\'t get songs, permission denied!</string>
    <string name="forgot_api_key">You forgot to supply a Google Maps API key</string>
    <string name="marker">Marker in Zagreb</string>
</resources>
