<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_EditUser"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_DeleteUser"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_AddNewUser"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ChangeUser"
        android:orderInCategory="100"
        android:title="@string/action_change"
        app:showAsAction="never" />
</menu>
