<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NewUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/myImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_image"
            android:layout_gravity="center"
            android:contentDescription="@string/register"
            android:onClick="ChoosePicBtn"/>

        <EditText
            android:id="@+id/edtTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:inputType="text"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/edtTxtSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:inputType="text"
            android:hint="@string/surname"/>

        <EditText
            android:id="@+id/edtTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/edtTxtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_user"
            android:layout_margin="@dimen/dp5"
            android:onClick="BtnNewRegisterClick"/>

    </LinearLayout>
</ScrollView>